--- a/index.html
+++ b/index.html
@@ -847,6 +847,9 @@
                 <button class="btn btn-warning" onclick="limparDados()">🗑️ Limpar Dados</button>
                 <button class="btn" onclick="salvarDados()">💾 Salvar Apuração</button>
                 <button class="btn" onclick="compararRegimes()">⚖️ Comparar Regimes</button>
+                <a href="integrada.html" class="btn" style="background: linear-gradient(135deg, #9b59b6, #8e44ad); margin: 10px 5px;">
+    🚀 Nova Versão Integrada
+</a>
             </div>
         </div>
     </div>
