--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
         }
 
         .ai-send {
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #11998e, #38ef7d);
             color: white;
             border: none;
             padding: 12px 18px;
@@ -1406,7 +1406,7 @@
             
             <div class="ai-messages" id="aiMessages">
                 <div class="ai-message ai">
-                    <strong>👋 Olá!</strong> Sou seu Contador IA Especialista com mais de 30 anos de experiência em tributação brasileira.
+                    <strong>👋 Olá!</strong> Sou seu Contador IA Especialista em tributação brasileira.
                     <br><br>
                     Estou aqui para:
                     <br>• Explicar os cálculos realizados
@@ -3023,7 +3023,7 @@ Responda sempre como esse contador experiente, oferecendo insights valiosos base
                 aiConversationHistory = [];
                 document.getElementById('aiMessages').innerHTML = `
                     <div class="ai-message ai">
-                        <strong>👋 Olá!</strong> Sou seu Contador IA Especialista com mais de 30 anos de experiência em tributação brasileira.
+                        <strong>👋 Olá!</strong> Sou seu Contador IA Especialista em tributação brasileira.
                         <br><br>
                         Estou aqui para:
                         <br>• Explicar os cálculos realizados
