--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@
             <div class="ai-header">
                 <div>
                     <h3>🤖 Contador IA Especialista</h3>
-                    <div class="ai-status" id="aiStatus">Online • 30+ anos experiência</div>
+                    <div class="ai-status" id="aiStatus">Online • Tributacao Brasileira</div>
                 </div>
                 <button class="ai-close" onclick="toggleAI()">✕</button>
             </div>
