--- a/index.html
+++ b/index.html
@@ -1858,53 +1858,78 @@ Responda sempre como esse contador experiente, oferecendo insights valiosos base
             const perguntaLower = pergunta.toLowerCase();
             
             // Cronograma da reforma
-            if (perguntaLower.includes('cronograma') && perguntaLower.includes('reforma')) {
-                return `📋 **Cronograma da Reforma Tributária Brasileira (EC 132/2023)**
+ if (perguntaLower.includes('cronograma') && perguntaLower.includes('reforma')) {
+    return `📋 **Cronograma da Reforma Tributária Brasileira (EC 132/2023 e LC 214/2025)**
 
-A reforma tributária estabelece o seguinte cronograma:
+A reforma tributária estabelece o seguinte cronograma atualizado:
 
 **🎯 FASES PRINCIPAIS:**
 
-**2025** - Último ano do sistema atual
+**2025** - Preparação e Regulamentação
 • Sistema tributário vigente (ICMS + ISS + PIS + COFINS + IPI)
-• Preparação para transição
-• Regulamentação complementar
+• LC 214/2025 em vigor (sancionada em 16/01/2025)
+• Criação do Comitê Gestor temporário do IBS
+• Preparação para fase de testes
 
-**2026** - Início da Transição (Fase 1)
-• CBS substitui 50% do PIS/COFINS
-• ICMS, ISS e IPI mantidos 100%
-• Empresas começam adaptação
+**2026** - Início da Fase de Testes
+• CBS teste: 0,9% (dispensado recolhimento se cumprir obrigações)
+• IBS teste: 0,1% (dispensado recolhimento se cumprir obrigações)
+• ICMS, ISS, PIS e COFINS mantidos 100%
+• Adaptação de sistemas e processos
 
-**2027** - CBS Completa + IBS Inicial (Fase 2)
-• CBS substitui 100% do PIS/COFINS
-• IBS substitui 10% do ICMS/ISS
-• Novos sistemas de controle
+**2027** - CBS Entra em Vigor + Imposto Seletivo
+• CBS substitui 100% do PIS/COFINS (extintos)
+• IBS teste mantido a 0,1%
+• Imposto Seletivo (IS) entra em vigor
+• IPI com alíquota zero (exceto Zona Franca de Manaus)
 
-**2029** - Meio da Transição (Fase 3)
-• IBS substitui 60% do ICMS/ISS
-• ICMS/ISS reduzidos para 40%
-• IPI reduzido (apenas produtos específicos)
+**2027-2028** - Ajustes de Transição
+• CBS reduzida em 0,1 ponto percentual
+• IBS mantido a 0,1%
+• Preparação para transição do ICMS/ISS
 
-**2033** - Transição Quase Completa (Fase 4)
-• IBS substitui 90% do ICMS/ISS
-• Sistema quase unificado
-• Ajustes finais
+**2029-2032** - Transição Gradual do IBS
+• IBS substitui gradualmente ICMS/ISS (10% ao ano)
+• ICMS/ISS reduzidos em 10% ao ano
+• 2029: IBS 10% | ICMS/ISS 90%
+• 2030: IBS 20% | ICMS/ISS 80%
+• 2031: IBS 30% | ICMS/ISS 70%
+• 2032: IBS 40% | ICMS/ISS 60%
 
-**2034** - Sistema Novo Completo (Fase 5)
-• IBS + CBS unificados (alíquota média 26,5%)
-• IPI apenas para produtos específicos
-• Simplicidade total
+**2033** - Sistema Novo Completo
+• IBS + CBS unificados (alíquota estimada: ~28%)
+• ICMS, ISS, PIS e COFINS extintos
+• IPI apenas para produtos da Zona Franca de Manaus
+• Sistema totalmente implementado
+
+**💡 ALÍQUOTAS ESTIMADAS (atualizadas):**
+• CBS: ~9,3% (federal)
+• IBS: ~18,7% (estados e municípios)
+• **Total IVA: ~28%** (pode variar conforme exceções e benefícios)
 
 **💡 IMPACTO PARA SUA EMPRESA:**
 • ✅ Simplificação significativa de obrigações
-• ✅ Créditos mais amplos e unificados  
+• ✅ Créditos amplos e unificados (inclusive bens de uso)
+• ✅ Sistema não-cumulativo completo
 • ✅ Redução de complexidade operacional
 • ⚠️ Necessário planejamento desde 2025
+• ⚠️ Adaptação de sistemas fiscais obrigatória
 
-**🚀 PRÓXIMOS PASSOS:**
-1. Avaliar impacto atual vs reforma (use a calculadora!)
-2. Preparar sistemas para transição
-3. Acompanhar regulamentação 2025
+**🔥 NOVIDADES DA LC 214/2025:**
+• Split payment (pagamento fracionado)
+• Cashback para famílias de baixa renda
+• Regimes diferenciados por setor
+• Cesta básica com alíquota zero
+• Descontos de 30% e 60% para categorias específicas
+
+**🚀 PRÓXIMOS PASSOS IMEDIATOS:**
+1. Avaliar impacto atual vs reforma (use calculadoras especializadas)
+2. Preparar sistemas para 2026 (fase de testes)
+3. Capacitar equipe fiscal e contábil
+4. Acompanhar regulamentação complementar (PLP 108/2024)
+5. Planejar adequação de contratos e precificação
+
+**⚠️ ATENÇÃO:** Regulamentação ainda em curso - acompanhe atualizações!`;
 
 *Nota: Sistema IA temporariamente offline. Use a calculadora para simular seu cenário específico.*`;
             }
