--- a/index.html
+++ b/index.html
@@ -1929,7 +1929,7 @@ A reforma tributária estabelece o seguinte cronograma atualizado:
 4. Acompanhar regulamentação complementar (PLP 108/2024)
 5. Planejar adequação de contratos e precificação
 
-**⚠️ ATENÇÃO:** Regulamentação ainda em curso - acompanhe atualizações!`;
+**⚠️ ATENÇÃO:** Regulamentação ainda em curso - acompanhe atualizações!
 
 *Nota: Sistema IA temporariamente offline. Use a calculadora para simular seu cenário específico.*`;
             }
